test/it/code-samples/positive/pages-any-prop-on-playable-mixin-next-and-previous/pageCode.js
$w("#gallery1")
  .next()
  .then(nextItem => (nextItem.nonExistingProp = "something"));
  
$w("#gallery1")
  .previous()
  .then(previousItem => (previousItem.nonExistingProp = "something"));
