test/it/code-samples/negative/pages-bad-usages-of-existing-prop-on-playable-mixin-next-previous/pageCode.js
$w("#gallery1")
  .next()
  .then(nextItem => (nextItem.onMouseIn("notAFunction")));
  
$w("#gallery1")
  .previous()
  .then(previousItem => (previousItem.onMouseIn("notAFunction")));
